# fin

./: README.md  add_test_data.py  init_database.py  pyproject.toml  run_app.py
src/fin/: DB_payment.py  database.py  finance.db  init_db.py
src/fin/GUI/: advanced_features.py  main.py  main_window.py
src/fin/db/: DB_payment.py  database.py  finance.db  init_db.py
