[project]
name = "fin"
version = "0.1.0"
description = ""
authors = [
    {name = "Koshveptos",email = "kazakovvasilij1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyqt6 (>=6.9.1,<7.0.0)",
    "pyside6 (>=6.9.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "fin", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
